@@ -162,6 +162,7 @@ SET(bicpl_LIB_SRCS
   Objects/colours.c 
   Objects/graphics_io.c 
   Objects/freesurfer_io.c 
+  Objects/brainsuite_io.c
   Objects/landmark_file.c 
   Objects/lines.c 
   Objects/markers.c 
